infrastructure/k8s/apps/lofibooks/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lofibooks-api
spec:
  selector:
    app: lofibooks-api
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
