infrastructure/k8s/apps/lofibooks/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lofibooks-frontend
spec:
  selector:
    app: lofibooks-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
